--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,22 @@
 ﻿<html lang="en" style="height: 100%; width: 100%">
-<head>
-    <link rel="icon" type="image/png" href="https://imgur.com/RHkp0Iv.png"/>
-    <meta property="og:image" content="https://imgur.com/yNy7LuK.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="250">
-    <meta property="og:image:height" content="250">
-    <meta name="theme-color" content="#f2e3d9">
-    <title>Latte</title>
-    <meta name="keywords" content="study latte organization calendar project group classroom class students student">
-    <meta name="description"
-          content="Latte is a student-designed study tool that helps with organizing tasks, managing group projects, and meeting deadlines. Its aim is to enhance productivity and academic success.">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-</head>
+    <head>
+        <link rel="icon" type="image/png" href="https://imgur.com/RHkp0Iv.png"/>
+        <meta property="og:image" content="https://imgur.com/RHkp0Iv.png">
+        <meta property="og:image:type" content="image/png">
+        <meta property="og:image:width" content="250">
+        <meta property="og:image:height" content="250">
+        <meta name="theme-color" content="#f2e3d9">
+        <title>Latte</title>
+        <meta name="keywords" content="study latte organization calendar project group classroom class students student">
+        <meta name="description"
+              content="Latte is a student-designed study tool that helps with organizing tasks, managing group projects, and meeting deadlines. Its aim is to enhance productivity and academic success.">
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <link rel="manifest" href="./manifest.json" />
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
     <body style="margin: 0">
-        <iframe src="https://latte.changemakers.tools/" title="Latte" style="border: 0" width="100%" height="100%">
+        <iframe src="https://latte.simvoly.com/" title="Latte" style="border: 0" width="100%" height="100%">
         </iframe>
     </body>
 </html>
