--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<html lang="en" style="height: 100%; width: 100%">
 <head>
     <link rel="icon" type="image/png" href="https://imgur.com/RHkp0Iv.png"/>
-    <meta property="og:image" content="https://imgur.com/RHkp0Iv.png">
+    <meta property="og:image" content="https://imgur.com/yNy7LuK.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="250">
     <meta property="og:image:height" content="250">
