--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
     <body style="margin: 0">
-        <iframe src="https://latte.changemakers.tools/" title="Latte" style="border: 0" width="100%" height="100%">
+        <iframe src="https://latte.simvoly.com/" title="Latte" style="border: 0" width="100%" height="100%">
         </iframe>
     </body>
 </html>
